--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aulaweb2018",
   "version": "1.0.0",
   "description": "",
-  "main": "index.php",
+  "main": "index.html",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/helioh2/aulaphp2018.git"
@@ -13,35 +13,18 @@
     "url": "https://github.com/helioh2/aulaphp2018/issues"
   },
   "homepage": "https://github.com/helioh2/aulaphp2018#readme",
-  "devDependencies": {
-    "bower": "^1.7.7",
-    "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
-    "karma-junit-reporter": "^0.4.1",
-    "protractor": "^4.0.9"
+  "scripts": {},
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-query-int": "^3.0.0",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.1.3",
+    "mongoose-paginate": "^5.0.3",
+    "node-restful": "^0.2.6",
+    "pm2": "^2.10.4"
   },
-  "scripts": {
-    "postinstall": "bower install",
-
-    "update-deps": "npm update",
-    "postupdate-deps": "bower update",
-
-    "prestart": "npm install",
-    "start": "php -S localhost:8000",
-
-    "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js --single-run",
-
-    "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
-
-    "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
-  
-
